# RocChat

./: .gitignore  ROCCHAT-SPEC.md  SECURITY.md  package-lock.json  package.json
.github/workflows/: backend-maintenance.yml  ci.yml
android/: .fdroid.yml  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/metadata/: com.rocchat.txt
backend/: package.json  tsconfig.json  wrangler.toml
backend/migrations/: 0001_initial.sql  0002_privacy_settings.sql  0003_indexes_and_hardening.sql  0004_push_notifications.sql  0005_ntfy_push_platform.sql  0006_push_indexes.sql  0007_avatar_url.sql  0008_tiers_business_features.sql  0009_mute_archive.sql  0010_notification_mode.sql  0011_chat_import.sql  0012_quiet_hours.sql  0013_conversation_theme.sql  0014_sso_config.sql  0015_reactions_edits_pins.sql  0016_api_keys_webhooks.sql  0017_transparency_supporters_pow_iap_crypto.sql  0018_hot_path_indexes.sql  0019_reply_to.sql  0020_pinned_conversations.sql  0021_index_audit.sql  0022_receipts_last_seen.sql  (+16 more)
desktop/: README.md  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docs/: REPRODUCIBLE-BUILDS.md  ROC-CLIENT.md
ios/: project.yml
shared/: channel-ecies.test.ts  crypto-utils.test.ts  crypto-utils.ts  double-ratchet.test.ts  double-ratchet.ts  index.ts  package.json  protocol.test.ts  protocol.ts  sender-keys.test.ts  sender-keys.ts  tsconfig.json  x3dh.test.ts  x3dh.ts
web/: index.html  package.json  tsconfig.json  vite.config.ts
(+120 files in other folders)
