[package]
name = "rocchat-desktop"
version = "1.0.0"
description = "RocChat Desktop — Tauri-wrapped secure messenger"
authors = ["RocChat Team"]
edition = "2021"

[lib]
name = "rocchat_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "protocol-asset"] }
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
